:bug: Fade animation messed with z-index

--- a/css/main.css
+++ b/css/main.css
@@ -487,7 +487,6 @@ header nav ul {
 .feedback__title {
     font-size: 2em;
     color: #fff;
-    text-align: center;
 }
 
 .feedback__carousel {
